--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,11 +12,13 @@ nav:
       - 导入API模块: "lse/Import.md"
       - API模块简介:
           - 基础游戏API: "lse/api/Minecraft.md"
-          - 悬浮字API: "lse/api/FloatingText.md"
+          - 配置文件API: "lse/api/Config.md"
           - PlaceholderAPI: "lse/api/PlaceholderAPI.md"
+          - 计分板API: "lse/api/Scoreboard.md"
           - 合成表API: "lse/api/Recipes.md"
           - 实验性功能API: "lse/api/Experiments.md"
           - 事件API: "lse/api/Event.md"
+          - 悬浮字API: "lse/api/FloatingText.md"
           - GMLIB版本: "lse/api/GMLIB.md"
   - BEPlaceholderAPI: "PAPI.md"
 theme: material
