--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,8 @@ nav:
           - 实验性功能API: "lse/api/Experiments.md"
           - 事件API: "lse/api/Event.md"
           - 悬浮字API: "lse/api/FloatingText.md"
-          - GMLIB版本: "lse/api/GMLIB.md"
+          - 版本信息API: "lse/api/GMLIB.md"
+          - I18nAPI: "lse/api/I18nAPI.md"
+          - 玩家数据库API: "lse/api/UserCache.md"
   - BEPlaceholderAPI: "PAPI.md"
 theme: material
